TEST_PROGRAMS/VALID/07/var_decl_type.go
// 1 var declaration specifying type only
package main

var x int
func main () {
	var y float64
	if(true) {
		var z string
	}
	var k rune
}
