TEST_PROGRAMS/INVALID/04/39.go
package main

func main() {
    //Illegal struct type
    var x struct{ foo [-1]int; }
}
